Closed Bug 821230 Opened 12 years ago Closed 12 years ago

crash in nsRefreshDriver::SetHighPrecisionTimersEnabled

Categories

(Core :: Layout, defect)

20 Branch
All
Windows 7
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla20
Tracking Status
firefox20 --- verified

People

(Reporter: scoobidiver, Assigned: vlad)

References

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

It first showed up in 20.0a1/20121212 and is currently #6 top crasher in this build. The regression range is:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=4dfe323a663d&tochange=634180132e68
It's likely a regression from bug 731974.

Signature 	nsRefreshDriver::SetHighPrecisionTimersEnabled(bool) More Reports Search
UUID	bd59ec4f-e0b2-4f81-a4c7-8cfa32121213
Date Processed	2012-12-13 07:12:59
Uptime	1200
Install Age	8.1 hours since version was first installed.
Install Time	2012-12-12 23:07:36
Product	Firefox
Version	20.0a1
Build ID	20121212034329
Release Channel	nightly
OS	Windows NT
OS Version	6.1.7601 Service Pack 1
Build Architecture	x86
Build Architecture Info	GenuineIntel family 6 model 37 stepping 2
Crash Reason	EXCEPTION_ACCESS_VIOLATION_READ
Crash Address	0x0
App Notes 	
AdapterVendorID: 0x10de, AdapterDeviceID: 0x0de1, AdapterSubsysID: 430119da, AdapterDriverVersion: 9.18.13.697
D2D? D2D+ DWrite? DWrite+ D3D10 Layers? D3D10 Layers+ 
EMCheckCompatibility	True
Adapter Vendor ID	0x10de
Adapter Device ID	0x0de1
Total Virtual Memory	4294836224
Available Virtual Memory	3728232448
System Memory Use Percentage	14
Available Page File	23689613312
Available Physical Memory	11013079040

Frame 	Module 	Signature 	Source
0 	xul.dll 	nsRefreshDriver::SetHighPrecisionTimersEnabled 	layout/base/nsRefreshDriver.cpp:718
1 	xul.dll 	nsPresContext::~nsPresContext 	layout/base/nsPresContext.cpp:260
2 	xul.dll 	nsPresContext::`scalar deleting destructor' 	
3 	xul.dll 	nsPresContext::Release 	layout/base/nsPresContext.cpp:324
4 	xul.dll 	nsXPCOMCycleCollectionParticipant::UnrootImpl 	obj-firefox/xpcom/build/nsCycleCollectionParticipant.cpp:37
5 	xul.dll 	nsCycleCollector::CollectWhite 	xpcom/base/nsCycleCollector.cpp:2409
6 	xul.dll 	nsCycleCollector::FinishCollection 	xpcom/base/nsCycleCollector.cpp:2915
7 	xul.dll 	nsCycleCollector::Collect 	xpcom/base/nsCycleCollector.cpp:2800
8 	xul.dll 	nsCycleCollector::Shutdown 	xpcom/base/nsCycleCollector.cpp:2965
9 	xul.dll 	nsCycleCollector_shutdown 	xpcom/base/nsCycleCollector.cpp:3400
10 	xul.dll 	mozilla::ShutdownXPCOM 	xpcom/build/nsXPComInit.cpp:619
11 	xul.dll 	ScopedXPCOMStartup::~ScopedXPCOMStartup 	toolkit/xre/nsAppRunner.cpp:1124
12 	xul.dll 	XREMain::XRE_main 	toolkit/xre/nsAppRunner.cpp:3916
13 	xul.dll 	XRE_main 	toolkit/xre/nsAppRunner.cpp:4089
14 	firefox.exe 	wmain 	toolkit/xre/nsWindowsWMain.cpp:105

More reports at:
https://crash-stats.mozilla.com/report/list?signature=nsRefreshDriver%3A%3ASetHighPrecisionTimersEnabled%28bool%29
Hmm, looking.
Assignee: nobody → vladimir
Attached patch fixSplinter Review
We're in the middle of xpcom shutdown, so we can't create any more xpcom objects (or at least no timer objects).  Just drop the precision down immediately.
Attachment #692275 - Flags: review?(ehsan)
Attachment #692275 - Flags: review?(ehsan) → review+
https://hg.mozilla.org/mozilla-central/rev/54a33584098a
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: