b=821230; crash in nsRefreshDriver::SetHighPrecisionTimersEnabled during xpcom shutdown; r=ehsan